# jellyfin-auto-groupings

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HEARTBEAT.md  LICENSE  Makefile  README.md  SECURITY.md  _common.py  anilist.py  app.py  config.json  config.py  coverage.xml  coverage_report.txt  current_test_out.txt  docker-compose.yml  imdb.py  index.html  jellyfin.py  letterboxd.py  mal.py  mypy.ini  network.py  package-lock.json  package.json  parse_test.py  pyproject.toml  pytest.ini  pyvenv.cfg  (+15 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: e2e-tests.yml  exhaustive-tests.yml  publish.yml  test.yml  virtual-jellyfin-tests.yml
docs/: API.md  ARCHITECTURE.md
e2e/: docker-compose.e2e.yml  generate_test_media.sh
static/css/: components.css  cover-generator.css  fonts.css  layout.css  reset.css  responsive.css  variables.css  wizard.css
static/js/: app.js
static/js/core/: api.js  state.js  ui.js
static/js/features/: cleanup.js  config.js  cover-generator.js  export-import.js  groupings.js  metadata.js  path-picker.js  sidebar-resizer.js  sync.js  test-connection.js  wizard.js
static/locales/: de.json  en.json  fr.json
templates/: base.html
templates/partials/: sidebar.html  topbar.html  wizard.html
templates/partials/main/: api-connections.html  groupings.html  sync-maintenance.html
templates/partials/modals/: cleanup.html  confirm-dialog.html  confirm-sync.html  cover-generator.html  error-dialog.html  export.html  import.html  path-picker.html  preview-sync.html
tests/: __init__.py  conftest.py  test_api_client.py  test_cleanup.py  test_common.py  test_config.py  test_deep_sync.py  test_external.py  test_fetchers.py  test_health_and_config.py  test_jellyfin_api.py  test_mal.py  test_metadata_rules.py  test_network.py  test_routes.py  test_routes_uncovered.py  test_scheduler.py  test_state.py  test_sync.py  test_sync_extended.py  test_sync_integration.py  test_sync_more_edges.py  test_sync_uncovered.py  test_tmdb.py  test_virtual_jellyfin_api.py  test_virtual_jellyfin_exhaustive.py  virtual_jellyfin.py
tests/frontend/: api.test.js  sidebar-resizer.test.js  state-advanced.test.js  state.test.js  test-connection.test.js  ui.test.js
tests/test_e2e/: __init__.py  conftest.py  test_e2e_cleanup.py  test_e2e_connection.py  test_e2e_libraries.py  test_e2e_metadata.py  test_e2e_preview.py  test_e2e_sync.py
unraid/: jellyfin-groupings.xml
