[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-groupings"
version = "1.0.0"
description = "Create virtual Jellyfin libraries by grouping media via symlinks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "e2e*", "unraid*"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "venv",
    "__pycache__",
    "tests",
    "node_modules",
]
warn_redundant_casts = true

[tool.ruff.lint]
extend-select = ["I", "PTH", "B", "SIM", "C4", "RET", "PERF", "TCH", "TRY400"]

[tool.pytest.ini_options]
markers = [
    "exhaustive: marks tests as exhaustive/edge-case tests that run against the specifically formatted virtual Jellyfin server (deselect with '-m \"not exhaustive\"')",
]
