[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-groupings"
dynamic = ["version"]
description = "Create virtual Jellyfin libraries by grouping media via symlinks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4,<4.0",
]

[project.urls]
Homepage = "https://github.com/entcheneric/jellyfin-auto-groupings"
"Bug Tracker" = "https://github.com/entcheneric/jellyfin-auto-groupings/issues"
Documentation = "https://github.com/entcheneric/jellyfin-auto-groupings#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.0",
    "types-requests",
    "mypy>=1.0.0",
]

[tool.setuptools_scm]
fallback_version = "1.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "e2e*", "unraid*"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "venv",
    "__pycache__",
    "tests",
    "node_modules",
]
warn_redundant_casts = true

[tool.ruff.lint]
extend-select = ["I", "F401", "PTH", "B", "SIM", "C4", "RET", "PERF", "TCH", "TRY300", "TRY400", "EM", "TRY401", "RUF"]
extend-ignore = ["PT019"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "exhaustive: marks tests as exhaustive/edge-case tests that run against the specifically formatted virtual Jellyfin server (deselect with '-m \"not exhaustive\"')",
    "e2e: marks tests as end-to-end tests that require a running Jellyfin instance and app server (deselect with '-m \"not e2e\"')",
]
addopts = "-q"
